# atisque-model

./: .gitignore  COMPILATION_GUIDE.md  DATASET_CARD.md  DATA_PREPARATION.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  TRAINING_GUIDE.md  docker-compose.yml  kpu_depth_model.onnx  main.py  model_van-gogh.py  nyu_depth_v2.py  pyproject.toml  setup.sh  simplified_temp.onnx  train_kpu_depth.py
scripts/: compile.sh  shell.sh  train.sh
